[gd_scene load_steps=14 format=3 uid="uid://cverplrjcjw7k"]

[ext_resource type="Script" uid="uid://tk3r4nlgjyph" path="res://UI/hud.gd" id="1_bytes"]
[ext_resource type="PackedScene" uid="uid://ddfmtvn3e76f4" path="res://UI/estate_buy_window.tscn" id="2_2o5uh"]
[ext_resource type="Texture2D" uid="uid://dt51k20s1c1yv" path="res://Assets/Textures/UI Textures/House.png" id="3_b1lf8"]
[ext_resource type="PackedScene" uid="uid://dy2xpjsdv1bsj" path="res://Utility/furniture_placer.tscn" id="3_rnl6m"]
[ext_resource type="Texture2D" uid="uid://b8maor062ddul" path="res://Assets/Textures/UI Textures/Wrench.png" id="4_rnl6m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ngt3"]
bg_color = Color(0.375623, 0.503376, 0.949372, 1)
border_width_left = 5
border_width_top = 2
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.323993, 0.571874, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_v1g7b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InfoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(426, -60)]
}

[sub_resource type="Animation" id="Animation_7ngt3"]
resource_name = "ShowInfo"
length = 4.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InfoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(426, -60), Vector2(426, 30), Vector2(426, 30), Vector2(426, -60)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4a2cq"]
_data = {
&"RESET": SubResource("Animation_v1g7b"),
&"ShowInfo": SubResource("Animation_7ngt3")
}

[sub_resource type="Animation" id="Animation_0j753"]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 258), Vector2(-70, 258)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i0a73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 258)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1ui3w"]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-70, 258), Vector2(10, 258)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pf7ph"]
_data = {
&"Hide": SubResource("Animation_0j753"),
&"RESET": SubResource("Animation_i0a73"),
&"Show": SubResource("Animation_1ui3w")
}

[node name="HUD" type="Control" groups=["hud", "updatable"]]
z_index = 20
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bytes")
estate_buy_window = ExtResource("2_2o5uh")
furniture_placer = ExtResource("3_rnl6m")

[node name="InfoPanel" type="PanelContainer" parent="."]
z_index = 2
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 255.0
offset_bottom = -10.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ngt3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="InfoPanel"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_4a2cq")
}
autoplay = "RESET"

[node name="Label" type="Label" parent="InfoPanel"]
layout_mode = 2
text = "Default Text "
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -143.0
offset_top = 25.0
offset_right = -53.0
offset_bottom = 58.0
grow_horizontal = 0

[node name="SideBar" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -66.0
offset_right = 74.0
offset_bottom = 66.0
grow_vertical = 2

[node name="BuildingSettingsButton" type="Button" parent="SideBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7ngt3")
icon = ExtResource("3_b1lf8")
expand_icon = true

[node name="BuildingEditButton" type="Button" parent="SideBar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7ngt3")
icon = ExtResource("4_rnl6m")
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="SideBar"]
libraries = {
&"": SubResource("AnimationLibrary_pf7ph")
}
autoplay = "Hide"

[connection signal="animation_finished" from="InfoPanel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="SideBar/BuildingEditButton" to="." method="_on_building_edit_button_pressed"]
